kustomize/base/shippingservice/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shippingservice
  namespace: core
  labels:
    app: shippingservice
spec:
  type: ClusterIP
  selector:
    app: shippingservice
  ports:
    - name: grpc
      port: 50051
      targetPort: 50051
